# lightfriend-cloud

./: .gitignore  CLAUDE.md  README.md  TESLA_IMPLEMENTATION_COMPLETE.md  tesla-proxy.service  update_lightfriend.sh
backend/: Cargo.toml  TESLA_SETUP.md  TESLA_VIRTUAL_KEY_SETUP.md  docker-compose.tesla-proxy.yml  get_tesla_pairing_link.sh
backend/migrations/2025-10-07-084831_magic_link/: down.sql  up.sql
backend/migrations/2025-10-07-123036_remove_server_key/: up.sql
backend/migrations/2025-10-10-053328_subaccoun/: down.sql  up.sql
backend/migrations/2025-10-11-184045_addstatustosubaccount/: down.sql  up.sql
backend/migrations/2025-10-18-054119_remove_temp_variables/: up.sql
backend/migrations/2025-10-19-065440_add_tinfoil_key_to_subaccounts/: down.sql  up.sql
backend/migrations/2025-11-06-072427_consolidate_to_tier_2/: down.sql  up.sql
backend/migrations/2025-11-06-090646_add_messaging_service_sid_to_subaccounts/: down.sql  up.sql
backend/migrations/2025-11-09-101743_add_tier3_geographic_pricing/: down.sql  up.sql
backend/migrations/2025-11-14-154019_add_tesla_integration/: down.sql  up.sql
backend/migrations/2025-11-15-085454_add_region_to_tesla/: down.sql  up.sql
backend/migrations/2025-11-16-170823_add_tesla_vehicle_selection/: down.sql  up.sql
backend/migrations/2025-11-16-175134_add_tesla_virtual_key_paired/: down.sql  up.sql
backend/migrations/2025-11-29-091301_remove_ask_sender_option/: down.sql  up.sql
backend/migrations/2025-11-30-113240_add_notify_on_climate_ready/: down.sql  up.sql
backend/migrations/2025-12-04-182147_add_totp_2fa/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/api/: elevenlabs.rs  elevenlabs_webhook.rs  shazam_call.rs  tesla.rs  twilio_availability.rs  twilio_sms.rs  twilio_utils.rs
backend/src/handlers/: admin_handlers.rs  auth_dtos.rs  auth_handlers.rs  auth_middleware.rs  billing_handlers.rs  filter_handlers.rs  google_calendar.rs  google_calendar_auth.rs  google_maps.rs  google_tasks.rs  google_tasks_auth.rs  imap_auth.rs  imap_handlers.rs  instagram_auth.rs  instagram_handlers.rs  messenger_auth.rs  messenger_handlers.rs  profile_handlers.rs  self_host_handlers.rs  signal_auth.rs  signal_handlers.rs  stripe_handlers.rs  telegram_auth.rs  telegram_handlers.rs  tesla_auth.rs  totp_handlers.rs  twilio_handlers.rs  uber.rs  uber_auth.rs  (+2 more)
(+73 files in other folders)
